--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="about-content">
         <div class="about-card glow-border" data-aos="zoom-in">
           <div class="about-image-container">
-            <img src="images/me.jpg" alt="Nazar" class="about-image" />
+            <img src="me.jpg" alt="Nazar" class="about-image" />
           </div>
           <h3>👋 Hello!</h3>
           <p>
