--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
       <h3>Connect With Me</h3>
       <p>Feel free to reach out through social media or email for collaborations and inquiries.</p>
       <div class="socials">
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-tiktok"></i></a>
+        <a href="https://github.com/na71K"><i class="fab fa-github"></i></a>
+        <a href="https://www.instagram.com/qwlskslz?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/@webdevna3ik"><i class="fab fa-tiktok"></i></a>
       </div>
       <div class="contact-box">
         <i class="fa-solid fa-envelope"></i>
@@ -215,9 +215,9 @@
   <div class="footer-container">
     <p>&copy; 2025 Nazar. All rights reserved.</p>
     <div class="footer-socials">
-      <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fab fa-dribbble"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/na71K"><i class="fab fa-github"></i></a>
+      <a href="https://dribbble.com/"><i class="fab fa-dribbble"></i></a>
+      <a href="https://www.instagram.com/qwlskslz?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fab fa-instagram"></i></a>
     </div>
   </div>
 </footer>
