--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
       </div>
 
       <div class="project-card glow-border" data-aos="flip-left" data-aos-delay="100">
-        <a href="https://na71k.github.io/MoodLamp/" target="_blank" class="project-card glow-border">
+        <a href="https://na71k.github.io/NovaMind/" target="_blank" class="project-card glow-border">
           <div class="project-thumb"></div>
           <div class="project-content">
-            <h3>MoodLamp</h3>
+            <h3>NovaMind</h3>
             <p>Landing page for a futuristic technology. Clean UI, responsive design, and subtle interactions.</p>
             <span class="tags">HTML / CSS </span>
           </div>
